Closed
Bug 224723
Opened 22 years ago
Closed 22 years ago
NS_ASSERTION(boxObject, "no box object!"); timer fired after tree was destroyed
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: assertion)
Attachments
(1 obsolete file)
Steps:
open history
close history
expected results: nothing interesting
actual results: assertion
+ mTree 0x00000000
NS_ASSERTION(boxObject, "no box object!");
nsDebug::Assertion(const char * 0x018160e0, const char * 0x018160d4, const char
* 0x01816090, int 732) line 109
nsTreeSelection::FireOnSelectHandler() line 732 + 38 bytes
nsTreeSelection::SelectCallback(nsITimer * 0x03584a68, void * 0x03504e60) line
345
nsTimerImpl::Fire() line 382 + 17 bytes
nsTimerManager::FireNextIdleTimer(nsTimerManager * const 0x020784a0) line 616
nsAppShell::Run(nsAppShell * const 0x00c57fe0) line 142
nsAppShellService::Run(nsAppShellService * const 0x00c57f58) line 476
main1(int 3, char * * 0x00444340, nsISupports * 0x00bd0fc0) line 1292 + 32 bytes
main(int 3, char * * 0x00444340) line 1679 + 37 bytes
mainCRTStartup() line 338 + 17 bytes
KERNEL32! SetUnhandledExceptionFilter + 92 bytes
Attachment #134790 -
Flags: superreview?(darin)
Attachment #134790 -
Flags: review?(varga)
![]() |
||
Comment 2•22 years ago
|
||
Comment on attachment 134790 [details] [diff] [review]
cancel the timer if the tree goes away
[Checked in: see Comment 5]
i defer to dbaron (or one of the other layout sr's).
Attachment #134790 -
Flags: superreview?(darin) → superreview?(dbaron)
Comment on attachment 134790 [details] [diff] [review]
cancel the timer if the tree goes away
[Checked in: see Comment 5]
If you use boolean logic rather than nesting ifs, sr=dbaron.
Attachment #134790 -
Flags: superreview?(dbaron) → superreview+
Comment 4•22 years ago
|
||
Comment on attachment 134790 [details] [diff] [review]
cancel the timer if the tree goes away
[Checked in: see Comment 5]
maybe you don't need the first condition at all
Attachment #134790 -
Flags: review?(varga) → review+
Comment 5•22 years ago
|
||
Comment on attachment 134790 [details] [diff] [review]
cancel the timer if the tree goes away
[Checked in: see Comment 5]
Check in: { 12/20/2003 20:27 timeless%mozdev.org 1.35 }
(with comment 4 suggestion)
Attachment #134790 -
Attachment description: cancel the timer if the tree goes away → cancel the timer if the tree goes away
[Checked in: see Comment 5]
Attachment #134790 -
Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•