Bug 224723 NS_ASSERTION(boxObject, "no box object!"); timer fired after tree was destroyed r=varga sr=dbaron